<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">



    <!-- Main Content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            app:layout_constraintTop_toBottomOf="@id/menu_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/choice_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_message"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/choice_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/say_menu"
            android:src="@android:drawable/ic_menu_more"
            app:backgroundTint="@color/lightsmoke"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:elevation="6dp"
            app:hoveredFocusedTranslationZ="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/dropdown_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@color/smokey"
            app:layout_constraintTop_toBottomOf="@id/menu_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    android:id="@+id/plan_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/say_top"
                    android:backgroundTint="@color/smokey"
                    android:textSize="18sp"
                    android:textColor="@color/blackish"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_marginBottom="4dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blackish"
                    android:layout_marginBottom="4dp"/>

                <Button
                    android:id="@+id/about_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:backgroundTint="@color/smokey"
                    android:textSize="18sp"
                    android:textColor="@color/blackish"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_marginBottom="4dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blackish"
                    android:layout_marginBottom="4dp"/>



                <Button
                    android:id="@+id/account_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/say_account"
                    android:backgroundTint="@color/smokey"
                    android:textSize="18sp"
                    android:textColor="@color/blackish"
                    style="@style/Widget.MaterialComponents.Button.TextButton" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>